# gbae

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  main.cpp  utility.cpp
.cache/clangd/index/: absl_vlog_is_on.h.72938F43E97C3DD3.idx  address_is_readable.cc.9F6B56E2C585AD7F.idx  address_is_readable.h.17854821B7FEC4CF.idx  algorithm.h.F54EC09A50930D08.idx  any_invocable.h.BCB94E0AB4AE434D.idx  any_invocable.h.F572A3465D7F514B.idx  append_truncated.h.6EF0B4C8624DFD5D.idx  arg.cc.8AA5A3AEF0ACBF67.idx  arg.h.B3550C3F0DEF2567.idx  ascii.cc.CEE5BAC1BCDD6811.idx  ascii.h.3801496DCAED3D55.idx  atomic_hook.h.8FC78818CC298D66.idx  attributes.h.D7E6ACAE88C0B0CA.idx  bad_any_cast.cc.779928C06690CB5B.idx  bad_any_cast.h.629E659FC595CA1E.idx  bad_optional_access.cc.6279D9B2234A58BF.idx  bad_optional_access.h.FBBE8D89AA00C2BC.idx  bad_variant_access.cc.93698B33BE81CD36.idx  bad_variant_access.h.406F4CF76DD0A6C2.idx  barrier.cc.8F46FDE010DF537B.idx  barrier.h.D9B4B3DE04C0BEDF.idx  bernoulli_distribution.h.107DCCEF43C11145.idx  bind.cc.AFB107559BE8E5B4.idx  bind.h.801AAD57705A1B76.idx  bits.h.5DEC6C551DCB4275.idx  bits.h.9043974E8C22E9A1.idx  blocking_counter.cc.E80D692FD34A01C8.idx  blocking_counter.h.D6ABCF2349566A1F.idx  call_once.h.2D9F7C77B5A9BD16.idx  casts.h.EA28E933AA1DC9A1.idx  charconv.cc.C5680C4C996BB5B1.idx  charconv.h.048819C1E571E988.idx  charconv_bigint.cc.A591BB3BD82BEE6B.idx  charconv_bigint.h.BCFD1805077F29D6.idx  charconv_parse.cc.AD468E21EE16EDAC.idx  charconv_parse.h.E8C948557A257AF4.idx  charset.h.90849701B0829E8C.idx  check_op.cc.1289F782B8B46959.idx  check_op.h.5F8E9A167416056C.idx  checker.h.AAD3D184D9326B9B.idx  (+391 more)
cmake/: compiler-warnings.cmake  sanitizers.cmake  static-analyzis.cmake
include/: fgba-defines.hpp
include/emulator/: cpudefines.hpp  gbaemu.hpp
include/emulator/cpu/: arm7tdmi.hpp  bus.hpp  lla.hpp  opcodes.hpp  prefetch-buffer.hpp  registermanager.hpp  shifter.hpp
include/emulator/cpu/instruction-impl/: implementation.hpp  instruction-flags.hpp
include/emulator/cpu/instruction-impl/detail/: insctruction-executor-impl.hpp  instruction-executor-decl.hpp  instruction-executor.hpp  instruction-executor.inl
include/emulator/mmu/: io-registers-map.hpp  memoryprimitives.hpp  mmu.hpp
include/emulator/ppu/: ppu.hpp  registers.hpp
include/gui/: display.hpp  fmt-imgui-glue.hpp
include/gui/devgui/: maingui.hpp
include/utility/: fatexception.hpp  funky-ints.hpp  scopeguard.hpp
shaders/rectangle/: rectangle.vs
shaders/vram/: vram.fs  vram.vs
src/: CMakeLists.txt  defines.hpp  main.cpp
src/emulator/: CMakeLists.txt  cpudefines.hpp  defines.hpp  gbaemu.cpp  gbaemu.hpp
src/emulator/cpu/: CMakeLists.txt  arm7tdmi.cpp  arm7tdmi.hpp  bus.cpp  bus.hpp  lla.hpp  opcodes.cpp  opcodes.hpp  registermanager.cpp  registermanager.hpp  shifter.hpp
src/emulator/cpu/disassembler/: disassembler.cpp  disassembler.hpp
src/emulator/cpu/instruction-implementation/: implementation.cpp  implementation.hpp
src/emulator/cpu/instruction-implementation/detail/: insctruction-executor-impl.hpp  instruction-executor-decl.hpp
src/emulator/mmu/: io-registers-map.cpp  io-registers-map.hpp  memoryprimitives.hpp  mmu.cpp  mmu.hpp
src/emulator/ppu/: ppu.cpp  ppu.hpp  registers.hpp
src/fuckstd/: CMakeLists.txt  fatexception.cpp  initializer_list.cpp  span.cpp  vector.cpp
src/gui/: CMakeLists.txt  display.cpp
src/gui/backend/: shader.cpp  shader.hpp
src/gui/devgui/: maingui.cpp
src/gui/frontend/: display.cpp  display.hpp
src/gui/frontend/devgui/: cpudisplay.hpp  maingui.cpp  maingui.hpp
src/utility/: CMakeLists.txt  fatexception.hpp  scopeguard.hpp
tests/: CMakeLists.txt
tests/cpu/: shifter.cpp  test-decoding.cpp
